--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "middle.messenger.praktikum.yandex",
   "version": "1.0.0",
   "description": "Sprint_1",
-  "main": "index.js",
   "scripts": {
-    "dev": "parcel src/pages/index.hbs --no-cache",
-    "build": "parcel build index.html",
+    "dev": "parcel ./src/pages/index.hbs --no-cache",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,7 +18,7 @@
   },
   "homepage": "https://github.com/Taiurskii/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
+    "@anikin/parcel-transformer-handlebars": "^1.0.9",
     "parcel": "^2.7.0",
     "postcss-import": "^15.0.0"
   }
