--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Sprint_1",
   "scripts": {
-    "dev": "parcel ./src/pages/index.hbs --no-cache",
+    "dev": "parcel ./src/pages/login.hbs --no-cache",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +20,11 @@
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
     "parcel": "^2.7.0",
-    "postcss-import": "^15.0.0"
+    "postcss-nested": "^5.0.6"
+  },
+  "engines": {
+    "node": ">= 16.15.0",
+    "npm": ">= 8.5.0",
+    "yarn": ">= 1.21.1"
   }
 }
