--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Sprint_1",
   "scripts": {
-    "dev": "parcel ./src/pages/login.hbs --no-cache",
+    "dev": "parcel ./src/pages/index.hbs --no-cache",
+    "start": "parcel build ./src/pages/index.hbs && node ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,5 +27,8 @@
     "node": ">= 16.15.0",
     "npm": ">= 8.5.0",
     "yarn": ">= 1.21.1"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
