--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sprint_1",
   "scripts": {
     "dev": "parcel ./src/pages/index.hbs --no-cache",
+    "build": "parcel build ./src/pages/index.hbs",
     "start": "parcel build ./src/pages/index.hbs && node ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
